# cis-pdf2csv

./: README.md  pyproject.toml  requirements.txt  security.md
docs/: rule-engine-design.md
src/cis_pdf2csv/: __init__.py  cli.py  diff.py  parser.py
src/cis_pdf2csv/intune_mapper/: __init__.py  cli.py  exporters.py  models.py  resolver.py  rules.py
test/: test_header_regex.py
