[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cis-pdf2csv"
version = "0.1.0"
description = "Parse CIS Benchmark PDFs into evidence-grade CSV/JSONL"
requires-python = ">=3.10"
dependencies = [
  "pymupdf==1.24.9",
  "pydantic==2.8.2",
  "rich==13.7.1",
]

[project.scripts]
cis-pdf2csv = "cis_pdf2csv.cli:main"
cis-intune-map = "cis_pdf2csv.intune_mapper.cli:main"
